[tool.poetry]
name = "zenml-challenge"
version = "0.1.0"
description = "A project for learning more about the zenml stack"
authors = ["Freddie Vargus <fjv41995@gmail.com>"]
readme = "README.md"
packages = [{include = "zenml_challenge"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
zenml = {extras = ["server", "stacks"], version = "^0.20.2"}
scikit-learn = "^1.1.2"
wandb = "^0.13.4"
joblib = "^1.2.0"
mlflow = {extras = ["extras"], version = "^1.29.0"}
itsdangerous = "2.0.1"
Werkzeug = "2.0.3"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
